[package]
name = "bkn-handler"
version = "0.1.0"
authors = ["owen-d <ow.diehl@gmail.com>"]

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
hex = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
cdrs = "1.0.1"
r2d2 = "0.7.3"
uuid = { version = "0.5", features = ["serde"] }
error-chain = "0.11.0"
scopeguard = "0.3.2" 
time = "0.1"
url = "1.5.1"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]